# Ising3D

./: CMakeLists.txt  README.md  binder_cumulant.py  input.json  magnetization_L10.txt  magnetization_L12.txt  magnetization_L16.txt  magnetization_L8.txt  main_autocorrelation.cpp  main_ising.cpp  plot.py  plot_susceptibility.py
include/: clock.hpp  ising_lattice.hpp  json11.hpp  metropolis.hpp  time_series.hpp  typedefs.hpp  wolff.hpp
outputs/: energies_L10.txt  energies_L12.txt  energies_L16.txt  energies_L8.txt  magnetization_L10.txt  magnetization_L12.txt  magnetization_L16.txt  magnetization_L8.txt
src/: clock.cpp  ising_lattice.cpp  json11.cpp  metropolis.cpp  time_series.cpp  wolff.cpp
